trunk/Archive2/68/0498b75f452fdd/output
main.cpp: In function 'int main()':
main.cpp:21:8: error: no match for call to '(b) (int)'
     x(1);
        ^
main.cpp:14:7: note: candidate is:
 class b : public a {
       ^
main.cpp:16:10: note: void b::operator()(std::string)
     void operator()(std::string){}
          ^
main.cpp:16:10: note:   no known conversion for argument 1 from 'int' to 'std::string {aka std::basic_string<char>}'
